2012-07-05  Thomas Orgis  <sobukus@users.sourceforge.net>

	* src/qtterminal/QtGnuplotApplication.cpp src/wxterminal/wxt_gui.cpp:
	The wxt and qt terminals handle -persist by continuing execution of a
	forked thread after the main thread has exited.  However, anyone waiting
	on the main thread won't see it as finished unless the stdout and 
	stderr streams inherited by the continuing process are closed.
	Bug #3309277

2012-07-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (z2cb):  After "set log cb", z2cb(x) was returning 0 for
	x<=0 rather than -inf.  This causes it to be mistaken for the logged
	value of x=1.  Now we return CB_AXIS.min instead.
	Bug #3540048

2012-07-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/plot3d.c: do_3dplot() was called in three places,
	but only one correctly wrapped it in splot_map_{de}active().
	Move the activate/deactivate calls inside do_3dplot().
	Bug #3539459

	* src/qtterminal/QtGnuplotScene.cpp: Set Z value of zoom box to a large
	value so that it is not occluded by plot elements.

	* src/datafile.c (df_readascii): If the first line in a data file 
	contains column headers (strings to be used as titles), then that line
	should be ignored when applying the "plot ... every N:M(:N1:M1)" filter.
	Bug #3438848

2012-06-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/grpicon.ico:  Icon with more color depths and resolutions,
	derived from Mojca Miklavec's SVG icon, see patch #3469808.

	Store icons in CVS in binary format.
	* src/win/grpicon.ico src/win/texticon.ico:  New files.
	* config/cygwin/Makefile config/mingw/Makefile config/msvc/Makefile
	config/watcom/Makefile src/win/wgnuplot.rc:  Binary icons.
	* src/win/geticon.c:  Removed.

	* config/makefile.nt:  Superseded by msvc/Makefile. Removed.

	Eliminate some compiler warnings.
	* src/axis.c (load_one_range):  Make static and add prototype.
	* src/bitmap.c (b_boxfill):  Remove unused variable.